--- a/templates/about_website.html.jinja
+++ b/templates/about_website.html.jinja
@@ -33,7 +33,7 @@
             non-static site at all.
         </p>
         <p>
-            <img src="images/website_terminal.png" alt="I use a Python script to generate my website"
+            <img src="images/about_website/website_terminal.png" alt="I use a Python script to generate my website"
                 style="width: 70%;">
         </p>
         <p>
@@ -50,7 +50,7 @@
             <li>Each page needed look the same. What if I decided to update the layout later on?</li>
             <li>It needed to be FUTURE-PROOF. What if I made a new song or collection?</li>
         </ol>
-        <img src="images/old_script.png" alt="My old solution to this involved lots of rather silly JavaScript"
+        <img src="images/about_website/old_script.png" alt="My old solution to this involved lots of rather silly JavaScript"
             style="width: 100%;">
         <p>
             My old way of dealing with this was a mess. I essentially had HTML files containing a big script that
@@ -69,7 +69,7 @@
                 href="{{ site.nitroguy.socials.github.link }}/nitroguy10.github.io/blob/a64279dd4eacce431d23bb2f548447b3d73da22d/js/song_data.js">all
                 that.</a>
         </p>
-        <img src="images/song_data_json.png" alt="All of my song data is kept in a JSON file" style="width: 50%;">
+        <img src="images/about_website/song_data_json.png" alt="All of my song data is kept in a JSON file" style="width: 50%;">
         <p>
             Oh yeah, all the data for my songs is stored in a single JSON file (at least NOW it is *shudders*).
             I'm really happy to be doing this as it not only serves as the central database from which my webpages
@@ -92,7 +92,7 @@
         <p>
             . . . . . . . . . . . Templating was what I was looking for.
         </p>
-        <img src="images/jinja_template.png" alt="Using Jinja templates was a much cleaner solution"
+        <img src="images/about_website/jinja_template.png" alt="Using Jinja templates was a much cleaner solution"
             style="width: 90%;">
         <p>
             Holy cow can your life be such a pain when you don't know the right search term for something, but I
@@ -103,7 +103,7 @@
             "songs" and one for "collections" and render them multiple times. I could even (finally) properly read the
             data from a JSON file with Python and fill in the templates using a "for-each" situation.
         </p>
-        <img src="images/python_jinja_rendering.png"
+        <img src="images/about_website/python_jinja_rendering.png"
             alt="My Jinja templates are rendered in a Python script using data from a JSON file" style="width: 80%;">
         <p>
             So that's how I arrived at this solution for my website. I <em>"compile"</em> the site if I decide to update
@@ -114,7 +114,7 @@
             social media links into a JSON file and fill them in with Jinja. I even did that with the tuscon link you
             saw earlier!
         </p>
-        <img src="images/sass_mixins.png" alt="I use mixins in Sass to make managing media queries easier and cleaner"
+        <img src="images/about_website/sass_mixins.png" alt="I use mixins in Sass to make managing media queries easier and cleaner"
             style="width: 40%;">
         <p>
             Compiling this website with a script also made using a CSS preprocessor more accessible.
