--- a/sass/main.sass
+++ b/sass/main.sass
@@ -31,8 +31,11 @@ h2
     font-size: 60px
 
     &#article-title
-            text-align: center
-            margin-bottom: 10px
+        text-align: center
+        margin-bottom: 10px
+    
+    &.article-subsection
+        font-size: 50px
 
 h3
     font-size: 15px
@@ -68,11 +71,14 @@ h4
         &#article-title
             text-align: center
             margin-bottom: 1vw
-    
+        
+        &.article-subsection
+            font-size: 8vw
+
     h4
         font-size: 10vw
         line-height: 10vw
-    
+
     h3
         font-size: 2.5vw
 
@@ -145,26 +151,25 @@ a
 
     .single-text
         font-size: 5vw
-    
+
     .table-links
         font-size: 5vw
         width: 100%
-    
+
     .download
         font-size: 5vw
         line-height: 5vw
         margin: 5px
-    
+
     .other-links
         font-size: 3vw
 
     #json
         font-size: 5vw
-    
+
     .on-collection-page
         .song-name
             font-size: 6vw
-
 
 // Lists
 
@@ -185,7 +190,7 @@ ol
 @mixin m-lists
     ul.song-bullets
         font-size: 5vw
-    
+
     ol
         font-size: 3.5vw
 
@@ -248,6 +253,13 @@ td
 #music-logo
     padding-left: 30px
 
+.article-image-intext
+    float: left
+
+    margin:
+        right: 15px
+        bottom: 15px
+
 @mixin m-images
     .games-gif
         width: 98%
@@ -255,12 +267,12 @@ td
     .cover-image, #music-logo
         width: 25vw
         height: 25vw
-    
+
     .on-song-page
         .cover-image
             width: 100%
             height: 100%
-    
+
     .social-icon-scale
         width: 5vw
         height: 5vw
