--- a/templates/projects.html.jinja
+++ b/templates/projects.html.jinja
@@ -1,1 +1,64 @@
-there's nothing here yet!
+<!DOCTYPE html>
+<html lang="en">
+<!-- Ah, you're looking at the source code aren't ya? Well, enjoy your stay! -->
+
+<!-- GENERATED FROM about_website.html.jinja -->
+
+<head>
+    <title>NitroGuy</title>
+
+    <meta name="description" content="How NitroGuy's website was made">
+    {{ site.head }}
+</head>
+
+<body id="article">
+    <h1>NitroGuy</h1>
+
+    <div id="content">
+        <h2 id="article-title">A List of Some of My Projects</h2>
+        <hr>
+        <br>
+        <p>
+            Hello! This is a list of some of my programming projects in roughly chronological order.
+            This includes software, plugins, webpages, microcontroller projects, et cetera.
+            Let me know if you have questions about anything and hope you enjoy!
+        </p>
+        <br>
+        <hr>
+
+        <h2 class="article-subsection">VEGAS Scripts/Plugins</h2>
+        <img src="images/projects/oscillator_randomizer_gui.png" class="article-image-intext" style="width: 40%;"
+            alt="The GUI of my plugin VEGAS_Oscillator_Randomizer">
+        <p>
+            When I first started using MAGIX VEGAS Pro 18, I found it generally very advanced and feature
+            rich, but at the same time lacking in certain effects that are standard in most editing software
+            I've used. When I found out how easy it was to make plugins for VEGAS, I kind of got a little
+            obsessed and
+            made a whole bunch of 'em! This actually was my first time ever making plugins and
+            while there is hardly any information or tutorials online on how to make VEGAS plugins, I must
+            say the API and docs- er... <em>doc</em> is quite good. Mostly.
+        </p>
+        <p>
+            This was also my first time working with C# outside of Unity and I quite like it. It also helps
+            that it was really easy to pick up since its syntax is exceptionally similar to Java except for
+            the Capitalization Of Everything. Working with Windows Forms was also very fun. There's
+            something I can't really explain about the look of those default Windows dialog boxes that's
+            somewhat nostalgic and just generally cool to work with; I get that same feeling with Java's
+            Swing using the default look-and-feel. I don't know what it is. Maybe I'm just weird like that.
+            I definitely envision myself using C# for something else in the future.
+        </p>
+        <p>
+            I guess I should talk about the actual plugins, huh?
+        </p>
+        <hr>
+        
+    </div>
+
+    <footer>
+        <a class="main-site" href="index.html">Main Site</a>
+    </footer>
+
+    {{ site.footer }}
+</body>
+
+</html>
