Added articles folder and tweaked header and footer templates

--- a/templates/articles/projects.html.jinja
+++ b/templates/articles/projects.html.jinja
@@ -27,7 +27,7 @@
         <hr>
 
         <h2 class="article-subsection">VEGAS Scripts/Plugins</h2>
-        <img src="images/projects/oscillator_randomizer_gui.png" class="article-image-intext" style="width: 40%;"
+        <img src="../images/projects/oscillator_randomizer_gui.png" class="article-image-intext" style="width: 40%;"
             alt="The GUI of my plugin VEGAS_Oscillator_Randomizer">
         <p>
             When I first started using MAGIX VEGAS Pro 18, I found it generally very advanced and feature
@@ -55,7 +55,7 @@
     </div>
 
     <footer>
-        <a class="main-site" href="index.html">Main Site</a>
+        <a class="main-site" href="../index.html">Main Site</a>
     </footer>
 
     {{ site.footer }}
