--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -37,7 +37,7 @@
                 building simple circuits to manipulate with microcontrollers but I'm already in love.</p>
             <p>Video games have been a massive part of my life but I hardly ever play them anymore and I want to get
                 back into them! Some of my all-time favorites include Minecraft (of course), Factorio,
-                Terraria, Team Fortress 2, Overwatch, and <a href="favorite_games.html" class="white-link">more</a>.</p>
+                Terraria, Team Fortress 2, Overwatch, and <a href="articles/favorite_games.html" class="white-link">more</a>.</p>
             <p>I am chronically addicted to music. I love playing, producing, and listening to music. I've loved a
                 variety of genres over the years but right now I am most fixated on Dubstep and EDM in general.</p>
             <p>he/him</p>
@@ -115,12 +115,12 @@
         </noscript>
         <p>I've made a bunch of cool software, plugins, webpages, and other projects which you can find on my <a
                 href="{{ site.nitroguy.socials.github.link }}">GitHub</a>. If you wanna hear my commentary about them,
-            I've made this <a href="projects.html">"blog post" thing</a>.</p>
+            I've made this <a href="articles/projects.html">article</a>.</p>
         <p>If you're just looking for the highlights, here are some of them:</p>
         <ul>
             <li><a href="{{ site.nitroguy.socials.github.link }}/Vegas-Scripts">Plugins/Scripts for VEGAS Pro</a></li>
             <li><a href="{{ site.nitroguy.socials.github.link }}/ERS-OL">Online Egyptian Rat Screw game</a></li>
-            <li><a href="about_website.html">How this website was made</a> (it's more complex than you might think!)</li>
+            <li><a href="articles/about_website.html">How this website was made</a> (it's more complex than you might think!)</li>
         </ul>
     </div>
     </div>
