--- a/templates/articles/projects.html.jinja
+++ b/templates/articles/projects.html.jinja
@@ -48,9 +48,47 @@
             I definitely envision myself using C# for something else in the future.
         </p>
         <p>
-            I guess I should talk about the actual plugins, huh?
+            I guess I should talk about the actual plugins, huh? Well there are a couple of really simple ones like one
+            that selects everything after the playhead and one that adds a VEGAS Picture In Picture effect to everything
+            (because yes, I wanted a script for that). The big and complex ones include a "screen shake" effect, a super
+            janky "chromatic aberration" effect, and a plugin that can animate any parameter of a video effect based on
+            an
+            oscillator, random number generator, or noise.
+        </p>
+        <p><a href="{{ site.nitroguy.socials.github.link }}/Vegas-Scripts#readme">VEGAS_Scripts on GitHub</a></p>
+        <hr>
+
+        <h2>nitroguy10.github.io</h2>
+        <p>Hey, its the website you're on right now! The way this site was created is actually pretty complicated and
+            made for a good story so I wrote a whole other article about it. Check it out!</p>
+        <p><a href=about_website.html>How This Website Was Made, A Story</a></p>
+        <hr>
+
+        <h2>ERS-OL</h2>
+        <img src="../images/projects/ers-ol.png" class="article-image-intext" style="width: 40%;"
+            alt="Egyptian Rat Screw Online">
+        <p>
+            ERS-OL (Egyptian Rat Screw Online) is an online multiplayer web game version of my favorite card game,
+            Egyptian Rat Screw. The game isn't actually being hosted anywhere right now so if you want to play it, you'd
+            have to clone the repository and run the server yourself. It uses Python for the server and, unsurprisingly,
+            JavaScript for the client.
+        </p>
+        <p>
+            Just like my website, this is another project I'm suuuuuper proud of. I've never come close to doing a
+            project involving networking at this scale or even at all. It took me an unprecidented amount of time and
+            effort to complete it and I really am very happy with the final product... if it weren't for the ping.
+        </p>
+        <p>
+            *sigh* yeah... in practice this game is rather unplayable over the internet because the ping gives the host
+            a massive advantage. Actually, this game runs quite well if played over LAN, but if you're able to play this
+            over LAN, THEN WHY NOT JUST PLAY THE ACTUAL CARD GAME AHAHHAHAHAH.
+        </p>
+        <p>
+            Despite all that, I'm really happy I was able to finish this project. At the very least, it reassured me
+            that game development is not the career path for me :P
         </p>
         <hr>
+
         
     </div>
 
