More sections of the Projects article

--- a/templates/articles/projects.html.jinja
+++ b/templates/articles/projects.html.jinja
@@ -87,9 +87,108 @@
             Despite all that, I'm really happy I was able to finish this project. At the very least, it reassured me
             that game development is not the career path for me :P
         </p>
+        <p><a href="{{ site.nitroguy.socials.github.link }}/ERS-OL">ERS-OL on GitHub</a></p>
         <hr>
 
-        
+        <h2>ColorSplitter</h2>
+        <img src="../images/projects/colorsplitter.png" class="article-image-intext" style="width: 40%;"
+            alt="The GUI of ColorSplitter">
+        <p>
+            ColorSplitter takes an input folder of images and isolates certain colors from that image (generating
+            "whitemasks") and outputs them into a folder. I originally made it in Processing but then I realized I only
+            used like 2 things from Processing so I remade it in pure Java. I'm not entirely sure what the applications
+            for this are lol. I actually made this upon request from one of my friends. He needed a program that
+            generated whitemasks for his game sprites or something so that program I did make.
+        </p>
+        <p><a href="{{ site.nitroguy.socials.github.link }}/ColorSplitter">ColorSplitter on GitHub</a></p>
+        <hr>
+
+        <h2>DocLCD</h2>
+        <p>
+            DocLCD is a "word processor" of sorts for 20x4 character LCDs with I2C drivers. It's controlled by a Python
+            program running on a Raspberry Pi which talks via serial to an Arduino program. The Arduino program then
+            controls the character LCD through the LCD's I2C driver. The Python program accepts keyboard input and
+            allows you type characters and traverse around the LCD screen.
+        </p>
+        <p><a href="{{ site.nitroguy.socials.github.link }}/DocLCD">DocLCD on GitHub</a></p>
+        <hr>
+
+        <h2>TimeRefresher</h2>
+        <img src="../images/projects/timerefresher.png" class="article-image-intext" style="width: 40%;"
+            alt="The GUI of TimeRefresher">
+        <p>
+            I needed TimeRefresher for one very specific thing. "Press F5 at a certain time". Yep, that's it. I love
+            just making programs to solve these tiny little inconveniences. Knowing how to code really <em>is</em> like
+            having superpowers.
+        </p>
+        <p><a href="{{ site.nitroguy.socials.github.link }}/TimeRefresher">TimeRefresher on GitHub</a></p>
+        <hr>
+
+        <h2>RoundUp</h2>
+        <img src="../images/projects/roundup_visual.png" class="article-image-intext" style="width: 40%;"
+            alt="A visual of what RoundUp does">
+        <p>
+            RoundUp is a single Python script that copies all files from a directory tree into a single folder. The
+            <a href="{{ site.nitroguy.socials.github.link }}/RoundUp#readme">README</a> does a better job of explaining
+            this so check it out if you're interested. Just
+            like with TimeRefresher, I created this to automate a process I often have had to do manually. Specifically,
+            to deal with photos that were automatically organized into folders by programs against my will.
+        </p>
+        <p><a href="{{ site.nitroguy.socials.github.link }}/RoundUp">RoundUp on GitHub</a></p>
+        <hr>
+
+        <h2>tuscon</h2>
+        <p>
+            tuscon (yes, you read that right, that really is the name) is a super-simple web-templating library. All it is is HTML files with parameters, if statements, and
+            for loops. I talk about my (unfortunate) reason for creating tuscon in that <a
+                href="about_website.html">article about my website</a>.
+        </p>
+        <p><a href="{{ site.nitroguy.socials.github.link }}/tuscon">tuscon on GitHub</a></p>
+        <hr>
+
+        <h2>Pi555</h2>
+        <p>
+
+        </p>
+        <hr>
+
+        <h2>ClickType</h2>
+        <p>
+
+        </p>
+        <hr>
+
+        <h2>RoboPlato 2000</h2>
+        <p>
+            Featuring such great wisdom as: "See none also those things of this class of great antiquity does not charm
+            from the eye of our manner in which young or motion is illusion to balanced; whereas all this to equals in a
+            long sufficient indissolution of their rules and proportions"
+        </p>
+        <hr>
+
+        <h2>ResistorTool</h2>
+        <p>
+
+        </p>
+        <hr>
+
+        <h2>Jumpy</h2>
+        <p>
+            P.S. If you're one of my friends from school and you came to my website just to look for Jumpy, you found
+            it! Congrats and welcome home! :)
+        </p>
+        <hr>
+
+        <h2>Dodge3</h2>
+        <p>
+
+        </p>
+        <hr>
+
+        <h2>CalcGames</h2>
+        <p>
+
+        </p>
     </div>
 
     <footer>
