--- a/sass/main.sass
+++ b/sass/main.sass
@@ -36,10 +36,16 @@ h2
     
     &.article-subsection
         font-size: 50px
+        margin:
+            top: 30px
+            bottom: 20px
 
 h3
     font-size: 15px
     text-align: left
+
+    &.article-subtitle
+        font-size: 25px
 
 h4
     font-size: 70px
@@ -74,6 +80,12 @@ h4
         
         &.article-subsection
             font-size: 8vw
+            margin:
+                top: 4vw
+                bottom: 3vw
+    
+    h3.article-subtitle
+        font-size: 4vw
 
     h4
         font-size: 10vw
