--- a/templates/articles/projects.html.jinja
+++ b/templates/articles/projects.html.jinja
@@ -27,6 +27,7 @@
         <hr>
 
         <h2 class="article-subsection">VEGAS Scripts/Plugins</h2>
+        <h3 class="article-subtitle">26 July - 16 August 2021</h3>
         <img src="../images/projects/oscillator_randomizer_gui.png" class="article-image-intext" style="width: 40%;"
             alt="The GUI of my plugin VEGAS_Oscillator_Randomizer">
         <p>
@@ -58,13 +59,15 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/Vegas-Scripts#readme">VEGAS_Scripts on GitHub</a></p>
         <hr>
 
-        <h2>nitroguy10.github.io</h2>
+        <h2 class="article-subsection">nitroguy10.github.io</h2>
+        <h3 class="article-subtitle">11 December 2016 - Ongoing</h3>
         <p>Hey, it's the website you're on right now! The way this site was created is actually pretty complicated and
             made for a good story, so I wrote a whole other article about it. Check it out!</p>
         <p><a href=about_website.html>How This Website Was Made, A Story</a></p>
         <hr>
 
-        <h2>ERS-OL</h2>
+        <h2 class="article-subsection">ERS-OL</h2>
+        <h3 class="article-subtitle">24 June - 3 July 2021</h3>
         <img src="../images/projects/ers-ol.png" class="article-image-intext" style="width: 40%;"
             alt="Egyptian Rat Screw Online">
         <p>
@@ -90,7 +93,8 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/ERS-OL">ERS-OL on GitHub</a></p>
         <hr>
 
-        <h2>ColorSplitter</h2>
+        <h2 class="article-subsection">ColorSplitter</h2>
+        <h3 class="article-subtitle">28 June - 29 June 2021</h3>
         <img src="../images/projects/colorsplitter.png" class="article-image-intext" style="width: 40%;"
             alt="The GUI of ColorSplitter">
         <p>
@@ -103,7 +107,8 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/ColorSplitter">ColorSplitter on GitHub</a></p>
         <hr>
 
-        <h2>DocLCD</h2>
+        <h2 class="article-subsection">DocLCD</h2>
+        <h3 class="article-subtitle">2 June - 4 June 2021</h3>
         <p>
             DocLCD is a "word processor" of sorts for 20x4 character LCDs with I2C drivers. It's controlled by a Python
             program running on a Raspberry Pi which talks via serial to an Arduino program. The Arduino program then
@@ -113,7 +118,8 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/DocLCD">DocLCD on GitHub</a></p>
         <hr>
 
-        <h2>TimeRefresher</h2>
+        <h2 class="article-subsection">TimeRefresher</h2>
+        <h3 class="article-subtitle">2 June 2021</h3>
         <img src="../images/projects/timerefresher.png" class="article-image-intext" style="width: 40%;"
             alt="The GUI of TimeRefresher">
         <p>
@@ -124,7 +130,8 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/TimeRefresher">TimeRefresher on GitHub</a></p>
         <hr>
 
-        <h2>RoundUp</h2>
+        <h2 class="article-subsection">RoundUp</h2>
+        <h3 class="article-subtitle">7 May - 23 May 2021</h3>
         <img src="../images/projects/roundup_visual.png" class="article-image-intext" style="width: 40%;"
             alt="A visual of what RoundUp does">
         <p>
@@ -137,7 +144,8 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/RoundUp">RoundUp on GitHub</a></p>
         <hr>
 
-        <h2>tuscon</h2>
+        <h2 class="article-subsection">tuscon</h2>
+        <h3 class="article-subtitle">21 March - 9 April 2021</h3>
         <p>
             tuscon (yes, you read that right, that really is the name) is a super-simple web-templating library. All it
             is is HTML files with parameters, if statements, and
@@ -147,7 +155,8 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/tuscon">tuscon on GitHub</a></p>
         <hr>
 
-        <h2>Pi555</h2>
+        <h2 class="article-subsection">Pi555</h2>
+        <h3 class="article-subtitle">ca. 2016 - 22 December 2019</h3>
         <p>
             Pi555 was my first Computer Engineering, microcontroller-type project thing and boy oh boy did I bite off
             more than I could chew with this one. Though intimidating, I was able to finish this project and I might
@@ -172,7 +181,8 @@
         <p>And... yeah. It worked. And it was awesome. I really wish I had something else to show you here. Sorry!</p>
         <hr>
 
-        <h2>ClickType</h2>
+        <h2 class="article-subsection">ClickType</h2>
+        <h3 class="article-subtitle">6 May - 8 May 2019</h3>
         <p>
             Let's go straight from awesome and complex back to simple and ridiculous. Ever wanted to hear an annoying
             click sound every time you press a key? No? Too bad; ClickType. Now you can experience the cacophony of blue
@@ -182,7 +192,19 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/ClickType">ClickType on GitHub</a></p>
         <hr>
 
-        <h2>RoboPlato 2000</h2>
+        <h2 class="article-subsection">ResistorTool</h2>
+        <h3 class="article-subtitle">5 August 2018</h3>
+        <p>
+            Tired of memorizing vulgar acronyms to help you read the resistance values of resistors from the colored
+            stripes? Or maybe you're just too lazy to learn them at all? Just input the colors into this tool and be
+            enlightened.
+        </p>
+        <p><a href="{{ site.nitroguy.socials.website.link }}/ResistorTool">ResistorTool</a></p>
+        <p><a href="{{ site.nitroguy.socials.github.link }}/ResistorTool">ResistorTool on GitHub</a></p>
+        <hr>
+
+        <h2 class="article-subsection">RoboPlato 2000</h2>
+        <h3 class="article-subtitle">ca. January 2018</h3>
         <p>That time I trained a <a href="https://github.com/karpathy/char-rnn"> character-based recurrent neural
                 network</a> on Plato's works.</p>
         <p>
@@ -193,17 +215,8 @@
         <p><a href="roboplato.html">The Essential Wisdom of RoboPlato 2000</a></p>
         <hr>
 
-        <h2>ResistorTool</h2>
-        <p>
-            Tired of memorizing vulgar acronyms to help you read the resistance values of resistors from the colored
-            stripes? Or maybe you're just too lazy to learn them at all? Just input the colors into this tool and be
-            enlightened.
-        </p>
-        <p><a href="{{ site.nitroguy.socials.website.link }}/ResistorTool">ResistorTool</a></p>
-        <p><a href="{{ site.nitroguy.socials.github.link }}/ResistorTool">ResistorTool on GitHub</a></p>
-        <hr>
-
-        <h2>Jumpy</h2>
+        <h2 class="article-subsection">Jumpy</h2>
+        <h3 class="article-subtitle">17 Aug 2017 - 4 December 2018</h3>
         <a href="{{ site.nitroguy.socials.website.link }}/Jumpy"><img src="../gifs/jumpy.gif"
                 class="article-image-intext" style="width: 40%;" alt="A gif of Jumpy gameplay"></a>
         <p>
@@ -218,7 +231,7 @@
             The game itself is a pretty basic HTML5 canvas web game. It's a typical 2D platformer with positively
             asinine level design. The difficulty curve is outta wack. What's funny is that whenever I found a bug with
             the physics, instead of fixing it, I designed levels that used that bug. The epitome of "it's not a bug,
-            it's a feature".
+            it's a feature". There's also a level creator, which is pretty awesome.
         </p>
         <p>
             <strong>Oh, and a word of warning:</strong> This game runs faster than normal on high refresh rate monitors.
@@ -232,7 +245,8 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/Jumpy">Jumpy on GitHub</a></p>
         <hr>
 
-        <h2>Dodge3</h2>
+        <h2 class="article-subsection">Dodge3</h2>
+        <h3 class="article-subtitle">18 March - 15 June 2017</h3>
         <a href="{{ site.nitroguy.socials.website.link }}/Dodge3"><img src="../gifs/Dodge3.gif"
                 class="article-image-intext" style="width: 40%;" alt="A gif of Dodge3 gameplay"></a>
         <p>
@@ -249,7 +263,8 @@
         <p><a href="{{ site.nitroguy.socials.github.link }}/Dodge3">Dodge3 on GitHub</a></p>
         <hr>
 
-        <h2>CalcGames</h2>
+        <h2 class="article-subsection">CalcGames</h2>
+        <h3 class="article-subtitle">5 January - 11 July 2017</h3>
         <img src="../gifs/serpent.gif" class="article-image-intext" style="width: 20%;" alt="A gif of Serpent gameplay">
         <img src="../gifs/matrix.gif" class="article-image-intext" style="width: 20%;" alt="A gif of Matrix Racer gameplay">
         <p>
