Portfolio page and general updates

--- a/templates/articles/projects.html.jinja
+++ b/templates/articles/projects.html.jinja
@@ -26,25 +26,46 @@
         <br>
         <hr>
 
+        <h2 class="article-subsection">recommends</h2>
+        <h3 class="article-subtitle">25 December 2021 - 4 January 2022</h3>
+        <h3 class="article-subtitle">Python, HTML, CSS, JavaScript - Flask, Jinja, SQLite, PyNaCl</h3>
+        <img src="../images/projects/recommends.png" class="article-image-intext" style="width: 40%;"
+            alt="A user's page on recommends">
+        <p>A social-media-I-guess-kinda-not-really site where users can recommend books, movies, etc. to their friends.
+            <a href="https://prydt.xyz/">prydt</a> and I made this in a couple days using Flask, Jinja, SQLite, PyNaCl,
+            and the usual HTML/CSS/JavaScript shebang. I mainly worked on the frontend and pry worked on the login and
+            database stuff. Overall, I'm pretty happy with how this turned out. It's quite minimal, but I feel like it
+            has a lot of potential if we were ever to come back and polish/expand/deploy it.
+        </p>
+        <p><a href="https://github.com/prydt/recommends">recommends on GitHub</a></p>
+        <hr>
+
         <h2 class="article-subsection">overthere</h2>
         <h3 class="article-subtitle">19 December 2021 - 24 December 2021</h3>
+        <h3 class="article-subtitle">Python, HTML, CSS, JavaScript - Flask, SQLite</h3>
         <img src="../images/projects/overthere.png" class="article-image-intext" style="width: 40%;"
             alt="The interface of overthere">
         <p>I sat thinking hard and long about my life and my future. Finally, I came to a realization: "Hm, I should
             probably make something with SQL." And overthere was born.</p>
-        <p>overthere is bit.ly/tinyurl clone-ish that lets you post multiple links on one page. It also has fun, memorable URLs
-            like "exquisite-cow"&mdash;a feature inspired by <a href="https://magic-wormhole.readthedocs.io/">Magic-Wormhole</a>.</p>
+        <p>overthere is bit.ly/tinyurl clone-ish that lets you post multiple links on one page. It also has fun,
+            memorable URLs
+            like "exquisite-cow"&mdash;a feature inspired by <a
+                href="https://magic-wormhole.readthedocs.io/">Magic-Wormhole</a>.</p>
         <p><a href="{{ site.nitroguy.socials.github.link }}/overthere">overthere on GitHub</a></p>
         <hr>
 
         <h2 class="article-subsection">Supremely_Hexagonal</h2>
         <h3 class="article-subtitle">28 October 2021 - 1 November 2021</h3>
+        <h3 class="article-subtitle">Java - Processing</h3>
         <img src="../images/projects/supremely_hexagonal.png" class="article-image-intext" style="width: 40%;"
             alt="A screenshot from Supremely Hexagonal">
         <p>Supremely_Hexagonal is a simplistic remake of <a href="https://superhexagon.com/">Super Hexagon</a> by Terry
             Cavanagh in
-            Processing. I actually make a LOT of stuff for fun in <a href="https://processing.org/">Processing</a> but I
-            don't post it on GitHub because most of it isn't exactly useful software lol.</p>
+            Processing. I actually make
+            <a href="https://drive.google.com/drive/folders/1ybSnsOlCGJLBSq4J3zse6883kvYxB3lb?usp=sharing"> a LOT of
+                stuff for fun</a> in <a href="https://processing.org/">Processing</a> but I
+            don't post it on GitHub because most of it isn't exactly useful software lol.
+        </p>
         <p>This one actually has a story. I was sitting in class with my roommate and he was playing Super Hexagon
             on his phone. I watched him play for a while and then said, "I bet I could make that". So that night I did.
             We both had just taken a math test and while any normal person would have been relaxing, I was coding for
@@ -59,6 +80,7 @@
 
         <h2 class="article-subsection">Peekaboo</h2>
         <h3 class="article-subtitle">1 October 2021 - 21 October 2021</h3>
+        <h3 class="article-subtitle">Java</h3>
         <p>Another short and sweet one. Peekaboo lets you take screenshots from the terminal using Java's Robot class.
             That is all.</p>
         <p><a href="{{ site.nitroguy.socials.github.link }}/Peekaboo">Peekaboo on GitHub</a></p>
@@ -66,6 +88,7 @@
 
         <h2 class="article-subsection">VEGAS Scripts/Plugins</h2>
         <h3 class="article-subtitle">26 July - 16 August 2021</h3>
+        <h3 class="article-subtitle">C# - Windows Forms, VEGAS Pro Script API</h3>
         <img src="../images/projects/oscillator_randomizer_gui.png" class="article-image-intext" style="width: 40%;"
             alt="The GUI of my plugin VEGAS_Oscillator_Randomizer">
         <p>
@@ -99,6 +122,7 @@
 
         <h2 class="article-subsection">nitroguy10.github.io</h2>
         <h3 class="article-subtitle">11 December 2016 - Ongoing</h3>
+        <h3 class="article-subtitle">Python, HTML, Sass, JavaScript - Jinja, JSON</h3>
         <p>Hey, it's the website you're on right now! The way this site was created is actually pretty complicated and
             made for a good story, so I wrote a whole other article about it. Check it out!</p>
         <p><a href=about_website.html>How This Website Was Made, A Story</a></p>
@@ -106,6 +130,7 @@
 
         <h2 class="article-subsection">ERS-OL</h2>
         <h3 class="article-subtitle">24 June - 3 July 2021</h3>
+        <h3 class="article-subtitle">Python, HTML, CSS, JavaScript - Flask, Socket.io</h3>
         <img src="../images/projects/ers-ol.png" class="article-image-intext" style="width: 40%;"
             alt="Egyptian Rat Screw Online">
         <p>
@@ -133,6 +158,7 @@
 
         <h2 class="article-subsection">ColorSplitter</h2>
         <h3 class="article-subtitle">28 June - 29 June 2021</h3>
+        <h3 class="article-subtitle">Java - Swing</h3>
         <img src="../images/projects/colorsplitter.png" class="article-image-intext" style="width: 40%;"
             alt="The GUI of ColorSplitter">
         <p>
@@ -147,6 +173,7 @@
 
         <h2 class="article-subsection">DocLCD</h2>
         <h3 class="article-subtitle">2 June - 4 June 2021</h3>
+        <h3 class="article-subtitle">Python, Arduino - PySerial, Pygame</h3>
         <p>
             DocLCD is a "word processor" of sorts for 20x4 character LCDs with I2C drivers. It's controlled by a Python
             program running on a Raspberry Pi which talks via serial to an Arduino program. The Arduino program then
@@ -158,6 +185,7 @@
 
         <h2 class="article-subsection">TimeRefresher</h2>
         <h3 class="article-subtitle">2 June 2021</h3>
+        <h3 class="article-subtitle">Java - Swing</h3>
         <img src="../images/projects/timerefresher.png" class="article-image-intext" style="width: 40%;"
             alt="The GUI of TimeRefresher">
         <p>
@@ -170,6 +198,7 @@
 
         <h2 class="article-subsection">RoundUp</h2>
         <h3 class="article-subtitle">7 May - 23 May 2021</h3>
+        <h3 class="article-subtitle">Python</h3>
         <img src="../images/projects/roundup_visual.png" class="article-image-intext" style="width: 40%;"
             alt="A visual of what RoundUp does">
         <p>
@@ -184,6 +213,7 @@
 
         <h2 class="article-subsection">tuscon</h2>
         <h3 class="article-subtitle">21 March - 9 April 2021</h3>
+        <h3 class="article-subtitle">Python - BeautifulSoup</h3>
         <p>
             tuscon (yes, you read that right, that really is the name) is a super-simple web-templating library. All it
             is is HTML files with parameters, if statements, and
@@ -195,6 +225,7 @@
 
         <h2 class="article-subsection">Pi555</h2>
         <h3 class="article-subtitle">ca. 2016 - 22 December 2019</h3>
+        <h3 class="article-subtitle">Java - MIDICSV, Pi4J, Raspberry Pi GPIO</h3>
         <p>
             Pi555 was my first Computer Engineering, microcontroller-type project thing and boy oh boy did I bite off
             more than I could chew with this one. Though intimidating, I was able to finish this project and I might
@@ -221,6 +252,7 @@
 
         <h2 class="article-subsection">ClickType</h2>
         <h3 class="article-subtitle">6 May - 8 May 2019</h3>
+        <h3 class="article-subtitle">HTML, CSS, JavaScript</h3>
         <p>
             Let's go straight from awesome and complex back to simple and ridiculous. Ever wanted to hear an annoying
             click sound every time you press a key? No? Too bad; ClickType. Now you can experience the cacophony of blue
@@ -232,6 +264,7 @@
 
         <h2 class="article-subsection">ResistorTool</h2>
         <h3 class="article-subtitle">5 August 2018</h3>
+        <h3 class="article-subtitle">HTML, CSS, JavaScript - Bootstrap</h3>
         <p>
             Tired of memorizing vulgar acronyms to help you read the resistance values of resistors from the colored
             stripes? Or maybe you're just too lazy to learn them at all? Just input the colors into this tool and be
@@ -255,6 +288,7 @@
 
         <h2 class="article-subsection">Jumpy</h2>
         <h3 class="article-subtitle">17 April 2017 - 4 December 2018</h3>
+        <h3 class="article-subtitle">HTML, CSS, JavaScript</h3>
         <a href="{{ site.nitroguy.socials.website.link }}/Jumpy"><img src="../gifs/jumpy.gif"
                 class="article-image-intext" style="width: 40%;" alt="A gif of Jumpy gameplay"></a>
         <p>
@@ -281,6 +315,7 @@
 
         <h2 class="article-subsection">Dodge3</h2>
         <h3 class="article-subtitle">18 March - 15 June 2017</h3>
+        <h3 class="article-subtitle">HTML, CSS, JavaScript</h3>
         <a href="{{ site.nitroguy.socials.website.link }}/Dodge3"><img src="../gifs/dodge3.gif"
                 class="article-image-intext" style="width: 40%;" alt="A gif of Dodge3 gameplay"></a>
         <p>
@@ -299,6 +334,7 @@
 
         <h2 class="article-subsection">CalcGames</h2>
         <h3 class="article-subtitle">5 January - 11 July 2017</h3>
+        <h3 class="article-subtitle">TI-Basic</h3>
         <img src="../gifs/serpent.gif" class="article-image-intext" style="width: 20%;" alt="A gif of Serpent gameplay">
         <img src="../gifs/matrix.gif" class="article-image-intext" style="width: 20%;"
             alt="A gif of Matrix Racer gameplay">
