--- a/docs/stylesheets/main_sass.css
+++ b/docs/stylesheets/main_sass.css
@@ -10,6 +10,21 @@ body#article {
   background-color: #444;
 }
 
+#portfolio {
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-top: 30px;
+  border-collapse: collapse;
+  background-color: #333;
+  border-style: solid;
+  border-color: #000000;
+  box-shadow: 2px 2px 10px 2px #000000;
+  text-align: justify;
+}
+
 h1 {
   font-size: 150px;
   background-color: #333;
