--- a/sass/main.sass
+++ b/sass/main.sass
@@ -15,6 +15,20 @@ body
     &#article
         background-color: #444
 
+#portfolio
+    width: 70%
+    margin-left: auto
+    margin-right: auto
+    padding-left: 40px
+    padding-right: 40px
+    margin-top: 30px
+    border-collapse: collapse
+    background-color: #333
+    border-style: solid
+    border-color: #000000
+    box-shadow: 2px 2px 10px 2px #000000
+    text-align: justify
+
 // Headings
 
 h1
