--- a/templates/components/head.html.jinja
+++ b/templates/components/head.html.jinja
@@ -7,6 +7,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{{ path }}favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ path }}favicon/favicon-16x16.png">
     <link rel="manifest" href="{{ path }}favicon/site.webmanifest">
-
-    <link href="https://fonts.googleapis.com/css?family=Tomorrow&display=swap" rel="stylesheet">
+    
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{ path }}stylesheets/main_sass.css">
