--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -32,9 +32,8 @@
             <p>I am highly interested in computer science and software development. Java is
                 without a doubt my best language and the language I have spent the most time with. I have
                 also been using Python to great extent as of late and I really
-                enjoy coding in it. I've also had a fair amount of experience working with C#, HTML, CSS, and
-                JavaScript. Finally, I've only had a little bit of experience with
-                building simple circuits to manipulate with microcontrollers but I'm already in love.</p>
+                enjoy coding in it. I've also had a great amount of experience working with HTML, CSS, and
+                JavaScript.</p>
             <p>Video games have been a massive part of my life but I hardly ever play them anymore and I want to get
                 back into them! Some of my all-time favorites include Minecraft (of course), Factorio,
                 Terraria, Team Fortress 2, Overwatch, and <a href="articles/favorite_games.html" class="white-link">more</a>.</p>
