--- a/templates/portfolio.html.jinja
+++ b/templates/portfolio.html.jinja
@@ -92,7 +92,7 @@
             Python script to generate all the necessary pages for my website. The stylesheets are done using Sass.
         </p>
         <p>If you're looking for something to read, I've written a <a href="./articles/about_website.html">blog post</a>
-            about the process of making this website
+            about the process of making this website.
             Once again, it is very informal.</p>
         <p><a href=index.html>nitroguy10.github.io</a></p>
         <hr>
@@ -147,7 +147,7 @@
             generated from a 555 chip.
             A Java program reads through a MIDI file and translates it into something that the "music player" Java
             program
-            can use. This "music player" program, which ran on a Raspberry Pi plays the correct notes at the correct
+            can use. This "music player" program, which runs on a Raspberry Pi, plays the correct notes at the correct
             times
             on the 555 timer by sending bytes to the digital potentiometer through its GPIO pins.
         </p>
