Added my new Twitter account

--- a/templates/components/footer.html.jinja
+++ b/templates/components/footer.html.jinja
@@ -7,6 +7,8 @@
                         height="32px" width="32px" title="GitHub" alt="GitHub" class="social-icon"></a>
         <a href="{{ nitroguy.socials.twitter.link }}"><img src="{{ path }}{{ nitroguy.socials.twitter.icon }}"
                         height="32px" width="32px" title="Twitter" alt="Twitter" class="social-icon"></a>
+        <a href="{{ nitroguy.socials.musicTwitter.link }}"><img src="{{ path }}{{ nitroguy.socials.musicTwitter.icon }}"
+            height="32px" width="32px" title='"The Sass" Twitter' alt='"The Sass" Twitter' class="social-icon"></a>
         <a href="{{ nitroguy.socials.newgrounds.link }}"><img src="{{ path }}{{ nitroguy.socials.newgrounds.icon }}"
                         height="32px" width="32px" title="Newgrounds" alt="Newgrounds" class="social-icon"></a>
         <div id="email" title="E-Mail">{{ nitroguy.socials.email.address }}</div>
