--- a/templates/links.html.jinja
+++ b/templates/links.html.jinja
@@ -31,6 +31,9 @@
                 <p class="table-links"><img src="{{ site.nitroguy.socials.twitter.icon }}" width="32" height="32"><a
                         href="{{ site.nitroguy.socials.twitter.link }}" class="table-links">Twitter</a>
                     <hr>
+                <p class="table-links"><img src="{{ site.nitroguy.socials.musicTwitter.icon }}" width="32" height="32"><a
+                        href="{{ site.nitroguy.socials.musicTwitter.link }}" class="table-links">"The Sass" Twitter</a>
+                    <hr>
                 <p class="table-links"><img src="{{ site.nitroguy.socials.newgrounds.icon }}" width="32" height="32"><a
                         href="{{ site.nitroguy.socials.newgrounds.link }}" class="table-links">Newgrounds</a>
                     <hr>
